deploy/service-assurance/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sa-telemetry-alertmanager
  name: alertmanager
  namespace: sa-telemetry
spec:
  ports:
  - name: web
    port: 9093
    protocol: TCP
    targetPort: web
  selector:
    app: alertmanager
  sessionAffinity: None
