deploy/service-assurance/alertmanager/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alertmanager
spec:
  host: alertmanager-sa-telemetry.router.default.svc.cluster.local
  to:
    kind: Service
    name: alertmanager
    weight: 100
  wildcardPolicy: None
